# corebot-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
examples/: mobile-swift.swift  python-client.py  react-hook.js
examples/todo-app/: Dockerfile  README.md  docker-compose.yaml  main.py  requirements.txt
examples/todo-app/instance/: todo.db
examples/todo-app/templates/: index.html
src/corebot_ai/: __init__.py  cache.py  cli.py  config.py  database.py  models.py
src/corebot_ai/api/: __init__.py  deps.py  main.py
src/corebot_ai/api/routers/: __init__.py  chat.py  ingest.py
src/corebot_ai/assistant/: __init__.py  intent.py  pipeline.py
src/corebot_ai/backends/: __init__.py  base.py  ollama.py
src/corebot_ai/ingestion/: __init__.py  formats.py  pipeline.py
src/corebot_ai/rag/: __init__.py  pipeline.py
src/corebot_ai/retrieval/: __init__.py  pgvector.py
src/corebot_ai/tools/: __init__.py  base.py  webapp.py
src/corebot_ai/utils/: __init__.py  logging.py  prompts.py
tests/: test_health.py  test_ingestion.py  test_prompts.py
