[project]
name = "corebot-ai"
version = "0.1.0"
description = "Pluggable RAG chatbot with CLI and API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "sqlalchemy==2.0.36",
  "psycopg2-binary==2.9.9",
  "pgvector==0.4.2",
  "ollama==0.3.3",
  "pydantic-settings==2.5.2",
  "python-multipart==0.0.9",
  "rich==13.9.3",
  "click==8.1.7",
  "pytest>=8.3.3",
]

[project.scripts]
corebot = "corebot_ai.cli:main"

[project.optional-dependencies]
dev = [
  "ruff==0.7.0",
  "mypy==1.12.0",
  "pytest==8.3.3",
  "pytest-asyncio==0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
